Ajustes realizados para o liquibase atualizar novo schema.